# blog

./: .gitattributes  .gitignore  404.md  about.markdown  blog.cabal  blogroll.markdown  index.html  makefile  readme.md  site.hs  stack.yaml
css/: default.css
posts/: miut_ultra_2017.md
posts/allofstatistics/: ch07q05.md  ch08q04.md  ch08q05.md
posts/bda3/: chapter_01_exercise_03.Rmd  chapter_01_exercise_03.md  chapter_01_exercise_09.Rmd  chapter_01_exercise_09.md  chapter_02_exercise_01.Rmd  chapter_02_exercise_01.md  chapter_02_exercise_02.Rmd  chapter_02_exercise_02.md  chapter_02_exercise_03.Rmd  chapter_02_exercise_03.md  chapter_02_exercise_04.Rmd  chapter_02_exercise_04.md  chapter_02_exercise_05.Rmd  chapter_02_exercise_05.md  chapter_02_exercise_06.Rmd  chapter_02_exercise_06.md  chapter_02_exercise_07.Rmd  chapter_02_exercise_07.md  chapter_02_exercise_08.Rmd  chapter_02_exercise_08.md  chapter_02_exercise_09.Rmd  (+67 more)
templates/: archive.html  default.html  post-list.html  post.html
tikz/: binary-tree-nontrivial.tex  binomial-tree-0.tex  binomial-tree-1.tex  binomial-tree-2.tex  binomial-tree-3.tex  bst-nontrivial.tex  latexmkrc  leftist-tree-1-node.tex  leftist-tree-2-nodes.tex  leftist-tree-3-nodes-1.tex  leftist-tree-3-nodes-2.tex  pfds-ex5.5-input.tex  pfds-ex5.5-output.tex  pfds-pairingheap-wide-deletemin.tex  pfds-pairingheap-wide.tex  pfds-splayheap-unbalanced-insert.tex  pfds-splayheap-unbalanced.tex  pfds_ex5-8b_invariant.tex  pfds_ex6-1.tex  red-black-1-node.tex  red-black-2-nodes.tex  red-black-3-nodes.tex  red-black-nontrivial.tex
(+80 files in other folders)
