name:               blog
version:            0.1.0.0
build-type:         Simple
cabal-version:      >= 1.10

executable site
  main-is:          site.hs
  build-depends:    base == 4.*
                  , hakyll == 4.9.*
                  , pandoc >= 1.19
                  , containers >= 0.5.7.1
  ghc-options:      -threaded
  default-language: Haskell2010
